# api/docs/swagger.yaml
@@ -7,19 +7,20 @@ definitions:
         type: integer
       seed:
         type: integer
+      uuid:
+        type: string
       word:
         type: string
-    required:
-    - date
-    - seed
     type: object
   domainObject.Drawing:
     properties:
       daily:
         $ref: '#/definitions/domainObject.Daily'
+      dailyID:
+        type: integer
       description:
         type: string
-      disliked_by:
+      dislikedBy:
         items:
           $ref: '#/definitions/domainObject.User'
         type: array
@@ -29,7 +30,7 @@ definitions:
         type: integer
       image:
         type: string
-      liked_by:
+      likedBy:
         items:
           $ref: '#/definitions/domainObject.User'
         type: array
@@ -37,24 +38,25 @@ definitions:
         type: integer
       user:
         $ref: '#/definitions/domainObject.User'
-    required:
-    - image
+      userID:
+        type: integer
+      uuid:
+        type: string
     type: object
   domainObject.DrawingRequest:
     properties:
       daily:
-        type: integer
+        type: string
       description:
         type: string
       image:
         type: string
       user:
-        type: integer
+        type: string
     required:
     - daily
     - description
     - image
-    - user
     type: object
   domainObject.User:
     properties:
@@ -66,9 +68,11 @@ definitions:
         type: integer
       password:
         type: string
-      profile_picture:
+      profilePicture:
         type: string
       username:
+        type: string
+      uuid:
         type: string
     type: object
   domainObject.UserRequest:
