# api/internal/domain/domainObject/user.go
@@ -1,14 +1,21 @@
 package domainObject
 
+import "github.com/google/uuid"
+
+// Domain Object
 type User struct {
-	ID             uint   `gorm:"primaryKey" json:"id"`
-	Username       string `gorm:"not null" json:"username"`
-	Password       string `gorm:"not null" json:"password"`
-	Email          string `gorm:"not null" json:"email"`
-	Background     string `json:"background"`
-	ProfilePicture string `json:"profile_picture"`
+	ID             uint   `gorm:"primaryKey"`
+	UUID           string `gorm:"unique;not null"`
+	Username       string `gorm:"not null"`
+	Password       string `gorm:"not null"`
+	Email          string `gorm:"not null"`
+	Background     string
+	ProfilePicture string
 }
 
+// INCOMING
+
+// Incoming request required fields
 type UserRequest struct {
 	Username       string `json:"username" binding:"required"`
 	Password       string `json:"password" binding:"required"`
@@ -17,8 +24,10 @@ type UserRequest struct {
 	ProfilePicture string `json:"profile_picture" binding:"required"`
 }
 
+// Convert incoming request to domain object
 func ConvertToUser(user *UserRequest) User {
 	return User{
+		UUID:           uuid.New().String(),
 		Username:       user.Username,
 		Password:       user.Password,
 		Email:          user.Email,
@@ -27,17 +36,21 @@ func ConvertToUser(user *UserRequest) User {
 	}
 }
 
+// OUTGOING
+
+// User response
 type UserResponse struct {
-	ID             uint   `json:"id"`
+	UUID           string `json:"id"`
 	Username       string `json:"username"`
 	Email          string `json:"email"`
 	Background     string `json:"background"`
 	ProfilePicture string `json:"profile_picture"`
 }
 
+// Convert domain object to response
 func ConvertToUserResponse(user User) UserResponse {
 	return UserResponse{
-		ID:             user.ID,
+		UUID:           user.UUID,
 		Username:       user.Username,
 		Email:          user.Email,
 		Background:     user.Background,
